syntax = "proto3";
option go_package = ".;proto";
service User{
  rpc GetUserList(PageInfo) returns(UserListResponse);//用户列表
  rpc GetUserMobile(MobileRequest)returns(UserInfoResponse);
  rpc GetUserID(IdRequest)returns(UserInfoResponse);
}
message PageInfo{
  uint32 pN =1;
  uint32 pSize=2;
}
message UserInfoResponse{
  uint32 id =1;
  string password = 2;
  string  mobile = 3;
  string nickName = 4;
  uint64  birthday =5;
  string gender = 6;
  uint32 role = 7;
}
message UserListResponse{
  int32 total =1;
  repeated UserInfoResponse data =2;
}
message MobileRequest{
  string mobile = 1;
}
message IdRequest{
  uint32 id = 1;
}